# mpreverse

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  GITHUB_SETUP.md  LICENSE  PHASE_2_PROGRESS_REPORT.md  PROJECT_RULES.md  PROJECT_STRUCTURE.md  README.md  REORGANIZATION_SUMMARY.md  REVIEW_GATE_V2_CHECKPOINT.txt  final_review_gate.py  mcp.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_ble_client_simple.py  test_ble_direct.py  test_ble_standalone.py  test_mcp_servers_v2.py
.cursor/: mcp.json  task.prompt  tasks.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
Review-Gate-main/V2/: ReviewGateV2.mdc  install.sh  mcp.json  review_gate_v2_mcp.py
analysis/: ble_emulation_guide.md  complete_ble_solution.md  dynamic_analysis_guide.md  dynamic_analysis_report.md  emulation_action_plan.md  marspro_analysis_report.md  marspro_reverse_engineering_report_20250622_203632.md  phase2_implementation_plan.md  protocol_discovery_template.md  protocol_documentation.md  reverse_engineering_summary.md
assets/review_gate/: install.ps1  review_gate_v2_simple.py
assets/tools/apktool/: apktool.bat  apktool.sh
configuration_samples/: marspro_configuration.yaml
custom_components/marspro/: coordinator.py  light.py  manifest.json
docs/: analysis.md  endpoints.md  project_summary.md
scripts/: analyze.py  analyze_ble.py  analyze_mcp.py  analyze_network.py  check_wsl2_status.ps1  decompile_apk.py  dynamic_analysis.py  dynamic_analysis_setup.py  fix_wsl2.ps1  marspro_ble_analyzer.py  marspro_ble_emulator_nrf_guide.md  reverse_engineering_analysis.py  run_all_commands.bat  setup_github_repo.ps1  setup_wsl2_ble_emulator.sh  wsl2_quick_reference.md  wsl2_setup_guide.md
scripts/frida/: ble_hook.js  net_hook.js
scripts/utilities/: push_to_github.py  setup_android_path.bat  setup_android_path.ps1  setup_android_tools.py  setup_github_mcp.py  setup_github_repo.bat  setup_path.bat  setup_path.ps1  setup_reverse_engineering_tools.py  test_mcp_servers.py
src/marspro/: __init__.py  api.py  ble_client.py  ble_client_standalone.py  config_flow.py  const.py
src/review_gate/: __init__.py  config.py
tests/: __init__.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py  test_home_assistant.py
tests/unit/: __init__.py  test_api.py  test_ble_client.py  test_coordinator.py
tools/mcp_servers/: apktool_server  jadx_server
