[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marspro"
version = "1.0.0"
description = "MarsPro Reverse Engineering & Home Assistant Integration"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "MarsPro Team", email = "team@marspro.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Home Automation",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "frida-tools>=14.0.0",
    "uv>=0.7.0",
    "mcp>=1.9.0",
    "aiohttp>=3.8.0",
    "bleak>=0.20.0",
    "faster-whisper>=0.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "pre-commit>=2.20.0",
    "mypy>=1.0.0",
]

[project.scripts]
marspro-analyze = "scripts.analyze:main"
marspro-setup = "scripts.setup:main"

[project.urls]
Homepage = "https://github.com/your-username/marspro-analysis"
Repository = "https://github.com/your-username/marspro-analysis"
Documentation = "https://github.com/your-username/marspro-analysis#readme"
Issues = "https://github.com/your-username/marspro-analysis/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.yml"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    ".eggs",
    "*.egg",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "frida.*",
    "bleak.*",
    "faster_whisper.*",
]
ignore_missing_imports = true 